--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "author": "Julio Preciado",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "express": "^4.18.2",
-    "mermaid": "^10.4.0"
+    "mermaid": "^10.4.0",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build:css": "postcss public/css/styles.css -o public/css/output.css"
+  },
+  "devDependencies": {
+    "postcss-cli": "^10.1.0"
   }
 }
