--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "mermaid": "^10.4.0"
     }
 }
